--- a/Playing with CSS Variables and JS/index.html
+++ b/Playing with CSS Variables and JS/index.html
@@ -22,5 +22,7 @@
   </div>
 
   <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
+
+  <script src="js/main.js"></script>
 </body>
 </html>
