added the new folder

--- a/Flex Panels Image Gallery/index.html
+++ b/Flex Panels Image Gallery/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
 
-
   <body>
     <div class="panels">
       <div class="panel panel1">
@@ -41,6 +40,25 @@
       </div>
     </div>
 
-    <script src="js/main.js"></script>
+    <script>
+      const panels = document.querySelectorAll(".panel");
+
+      function toggleOpen() {
+        this.classList.toggle("open"); //1)clickするとflex: 5;になる
+      }
+
+      function toggleActive(e) {
+        //multiple transitionだからイベントを渡す
+        console.log(e.propertyName);
+        if (e.propertyName.includes("flex")) {
+          this.classList.toggle("open-active");
+        }
+      }
+
+      panels.forEach((panel) => panel.addEventListener("click", toggleOpen)); //1)
+      panels.forEach(
+        (panel) => panel.addEventListener("transitionend", toggleActive) //2) 2の処理がおわったら
+      ); //transitionend：CSSのアニメーションが終わった時に発生
+    </script>
   </body>
 </html>
